# destruction-ii-hd

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_RU.md  CONTRIBUTING.md  CONTRIBUTING_RU.md  LICENSE  NEXT_STEPS.md  PROGRESS.md  PROGRESS_RU.md  README.md  README_RU.md  vcpkg.json
.github/: FUNDING.yml  pull_request_template.md
Code/: About.cpp  About.h  ActiveMenuItem.cpp  ActiveMenuItem.h  Actor.cpp  Actor.h  ActorCollision.cpp  ActorEvent.cpp  ActorEvent.h  ActorMovement.cpp  AimRules.h  AirPlane.cpp  AirPlane.h  AmmoAndArmorName.h  Animation.cpp  Animation.h  Aviator.cpp  Aviator.h  Base.cpp  Base.h  Blit.cpp  BlitEngine.cpp  BodyAndHairColor.h  BorderEndMenuItem.cpp  BorderEndMenuItem.h  BorderMenuItem.cpp  BorderMenuItem.h  ButtonGameState.cpp  ButtonGameState.h  ButtonMenuItem.cpp  ButtonMenuItem.h  BuyNow.cpp  BuyNow.h  CenterSquareEvent.cpp  CenterSquareEvent.h  Clone.cpp  Clone.h  Controls.cpp  Controls.h  CupInfo.cpp  (+225 more)
Code/Old Code/: Channel.cpp  Channel.h  Droid.cpp  Droid.h  Enemies.cpp  Enemies.h  GameObject.h  GameSetup.cpp  GameSetup.h  GraphicButton.cpp  GraphicButton.h  GraphicalButtonMenu.cpp  GraphicalButtonMenu.h  GraphicalItem.cpp  GraphicalItem.h  GraphicalMenuItem.cpp  GraphicalMenuItem.h  InfoArea.cpp  InfoArea.h  MatrixMenu.cpp  MatrixMenu.h  Object.cpp  Object.h  PCSetup.cpp  PCSetup.h  PlayerBlit.cpp  RocketTank.cpp  RocketTank.h  ScoreTable.cpp  ScoreTable.h  Security.cpp  SentryGun.cpp  SentryGun.h  SoundBuffer.cpp  SoundBuffer.h  SpecialAirStrike.cpp  SpecialAirStrike.h  SpecialTank.cpp  SpecialTank.h  Stores.cpp  (+17 more)
RunDir/Data/: Keys.config  Reg.Key  default.config
RunDir/Documentation/: Copyright Notice.txt  Troubleshooting.txt  Version History.txt
RunDir/Sound/: Laugh.pk
media/: README.md
